# Burrow

./: .gitignore  .goreleaser.yml  BUILD  WORKSPACE  repositories.bzl
core/: BUILD.bazel
core/internal/: BUILD.bazel
core/internal/cluster/: BUILD.bazel
core/internal/consumer/: BUILD.bazel
core/internal/evaluator/: BUILD.bazel
core/internal/helpers/: BUILD.bazel
core/internal/httpserver/: BUILD.bazel
core/internal/notifier/: BUILD.bazel
core/internal/storage/: BUILD.bazel
core/internal/zookeeper/: BUILD.bazel
core/protocol/: BUILD.bazel
