load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "coordinator.go",
        "fixtures.go",
        "inmemory.go",
    ],
    importpath = "github.com/linkedin/Burrow/core/internal/storage",
    visibility = ["//core:__subpackages__"],
    deps = [
        "//core/internal/helpers",
        "//core/protocol",
        "@com_github_oneofone_xxhash//:xxhash",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "storage_test",
    srcs = [
        "coordinator_test.go",
        "inmemory_test.go",
    ],
    embed = [":storage"],
    deps = [
        "//core/protocol",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)
